--- a/style.css
+++ b/style.css
@@ -38,5 +38,7 @@ body{
     text-align: center;
   } 
 h4{
-    margin: 0px 0px; 
+    margin-top: 0px;
+   margin-bottom: 0px;
+   padding: 0px 0px;
 }
